webapp/styles/styles.css
.topBlueBar,
.botBlueBar,
.sapTntToolPageHeader {
	background-color: #1d2d3e !important;
	color: white !important;
	border-radius: 0px !important;
}
.botBlueBar {
	height: 50px !important;
}
.sapTntToolPage {
	padding: 0px !important;
}
.sapMSFSSI{
	display: none !important;
}

.whiteText {
	color: white !important;
}
.whiteIcon .sapMBtnIcon {
	color: white !important;
}
.h40px{
	height: 90px !important;
}

.roundedButton > span {
	border-radius: 20px;
	background-color: rgb(255, 255, 255) !important;
	border: 0.0625rem solid #bcc3ca !important;
	padding-left: 14px !important;
	padding-right: 14px !important;
	padding-top: 0px !important;
	padding-bottom: 0px !important;
	transition: background-color 0.1s ease;
}

.roundedButton:hover > span {
	background-color: #ebf5fe !important;
}

.PackageControlTitle,
.whiteText {
	font-size: 28px !important;
}
@media only screen and (max-width: 600px) {
	.PackageControlTitle,
	.whiteText {
		font-size: 20px !important;
	}
}

.secondBar {
	height: 4rem !important;
	display: flex !important;
	justify-content: space-between !important;
	align-items: center !important;
	background-color: #f5f6f7 !important;
}

/* .sapUiTableVSbContainer,
.sapUiTableVSbHeader {
	display: none;
	width: 0px !important;
} */
.iconoCentro {
	display: flex !important;
	justify-content: center !important;
}

